[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"
authors = ["OpRustLearning"]
license = "MIT OR Apache-2.0"
description = "最小 x86_64 内核，对齐 phil-opp / Writing an OS in Rust（VGA 文本模式）"

[dependencies]
bootloader = { version = "0.9.34", features = ["map_physical_memory"] }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
spin = "0.9.8"
[package.metadata.bootimage]
# bootimage 将本 crate 的内核 ELF 与 bootloader 拼接为可引导磁盘镜像

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
