[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"
authors = ["MobtgZhang mobtgzhang@outlook.com"]

# 使用`cargo build`编译的时候需要的配置
[profile.dev]
panic = "abort"

# 使用`cargo build --release` 编译需要的配置
[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
